--- a/HW/hillslope_diffusion.ipynb
+++ b/HW/hillslope_diffusion.ipynb
@@ -64,7 +64,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "now comes the parameters to be set and some other parameters"
+    "now comes the parameters to be set"
    ]
   },
   {
@@ -313,17 +313,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- *What is the total relief on the hillslope (maximum elevation minus minimum elevation, approximate is fine)?* \n",
+    "*What is the total relief on the hillslope (maximum elevation minus minimum elevation, approximate is fine)?* \n",
     "\n",
-    "The total relief is approximately $45m$.\n",
+    "- The total relief is approximately $45m$.\n",
     "\n",
-    "- *What is happening to the slope across the hillslope (plot after code block 9)?*\n",
+    "*What is happening to the slope across the hillslope (plot after code block 9)?*\n",
     "\n",
-    "The slopes are the closest to 0 near the top of the hill and the largest as they go downhill.\n",
+    "- The slopes are the closest to 0 near the top of the hill and the largest as they go downhill.\n",
     "\n",
-    "- *Why is the change in slope necessary at steady state? (Answer questions with one or two sentences at most.)*\n",
+    "*Why is the change in slope necessary at steady state? (Answer questions with one or two sentences at most.)*\n",
     "\n",
-    "As sediment moves downhill and accumulates, sediment transport needs to increase for erosion to keep up with uplift. Sediment transport being proportional to slope should therefore increase downhill."
+    "- As sediment moves downhill and accumulates, sediment transport needs to increase for erosion to keep up with uplift. Sediment transport being proportional to slope should therefore increase downhill."
    ]
   },
   {
@@ -333,7 +333,7 @@
    "source": [
     "## 2.\n",
     "\n",
-    "How do you think the relief and slopes would change if you increase $D$ to 0.1 $m^2yr^{-1}$? In four sentences or less, describe what you think will happen and why. Use the equations to help you with your prediction."
+    "*How do you think the relief and slopes would change if you increase $D$ to 0.1 $m^2yr^{-1}$? In four sentences or less, describe what you think will happen and why. Use the equations to help you with your prediction.*"
    ]
   },
   {
@@ -341,15 +341,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since sediment transport is proportional to the slope via the Diffusivity constant $D$ as\n",
-    "$$\n",
-    "q_s=-D\\frac{dz}{dx},\n",
-    "$$\n",
-    "then an increase in $D$ will increase the magnitude of $q_s$ and therefore will create a topography with less relief. We can also see this from the analitical solution\n",
-    "$$\n",
-    "z = z_0 -\\frac{\\varepsilon}{D} \\frac{x^2}{2}\n",
-    "$$\n",
-    "where if we increase the value of $D$ we get a flatter parabola, i.e. less relief and more gentle slopes."
+    "- Since sediment transport is proportional to the slope via the Diffusivity constant $D$ as $$ q_s=-D\\frac{dz}{dx},$$ then an increase in $D$ will increase the magnitude of $q_s$ and therefore will create a topography with less relief. We can also see this from the analitical solution $$ z = z_0 -\\frac{\\varepsilon}{D} \\frac{x^2}{2} $$ where if we increase the value of $D$ we get a flatter parabola, i.e. less relief and more gentle slopes."
    ]
   },
   {
@@ -410,9 +402,9 @@
    "source": [
     "*Discuss how the hillslope differs from the results in question 1. Discuss how the results are similar to or different from your prediction in question 2. It is OK if your intuition was wrong! If you were wrong, can you see why from the equations after a second look?*\n",
     "\n",
-    "The new hillslope parabola has a coefficient that is a tenth of the original which maches in the graph with the model being on a scale of a tenth as well. \n",
+    "- The new hillslope parabola has a coefficient that is a tenth of the original which maches in the graph with the model being on a scale of a tenth as well. \n",
     "\n",
-    "The results match my predictions, one thing that I was not expecting was the convergence being faster as the curves are closer even after considering the scale which I'm guessing has something to do with the numerical method used to solve it."
+    "- The results match my predictions, one thing that I was not expecting was the convergence being faster as the curves are closer even after considering the scale which I'm guessing has something to do with the numerical method used to solve it."
    ]
   },
   {
@@ -424,7 +416,7 @@
     "\n",
     "*What do you think will happen when you increase **uplift_rate** (Code Block 4) by a factor of 10?  Will the topography be different? Will the relieve and slopes change? If yes, how and why?*\n",
     "\n",
-    "For steady state to hold the erosion rate and the uplift have to match, so I think the value of $\\varepsilon = U$ and therefore from the differential equation or the analitical solution the scale of the hillslope will increase in an order of magnitude of 10 as well. This will increase the relief and the slopes in the same way. \n",
+    "- For steady state to hold the erosion rate and the uplift have to match, so I think the value of $\\varepsilon = U$ and therefore from the differential equation or the analitical solution the scale of the hillslope will increase in an order of magnitude of 10 as well. This will increase the relief and the slopes in the same way. \n",
     "\n",
     "\n",
     "*Answer these questions first, and then rerun the code with **uplift_rate** = 0.001 m $yr^{-1}$.(Make sure you change $D$ - Code Block 3 - back to the original value of 0.01 $m^2yr^{-1}$ and restart from a flat surface.) Illustrate the final steady state topography.*"
@@ -505,7 +497,7 @@
    "source": [
     "*Discuss how these results differ from the results in question 1 and how the results match (or do not) your intuition. It is OK if your intuition was wrong.*\n",
     "\n",
-    "The hillslope is 10 times larger than the original one as expected and the convergence looks about as good as in the first one. Slopes are also a magnitude of 10 larger."
+    "- The hillslope is 10 times larger than the original one as expected and the convergence looks about as good as in the first one. Slopes are also a magnitude of 10 larger."
    ]
   }
  ],
