--- a/HW/stream_power_transient.ipynb
+++ b/HW/stream_power_transient.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,7 +563,11 @@
    "metadata": {},
    "source": [
     "#### 2. **Transient landscape responding to an increase in rock uplift.** \n",
-    "Use the base landscape and increase rock uplift uniformly by a factor of 4 to 0.0004 m/yr. Make sure you update the rock uplift rate and ensure that $tmax$ is 1e5 yrs and $dt$ is 500 yrs (Code Block 15). Run this until the maximum elevation in the grid is ~ 170 m and observe how the landscape gets to this elevation, i.e. plot intermediate steps. What patterns do you see in the supporting plots that illustrate this type of transient? Which patterns, if any, are diagnostic of a landscape response to uniform increase in rock uplift rate? (You may need to answer this after completing all of the questions.)\n"
+    "*Use the base landscape and increase rock uplift uniformly by a factor of 4 to 0.0004 m/yr. Make sure you update the rock uplift rate and ensure that $tmax$ is 1e5 yrs and $dt$ is 500 yrs (Code Block 15). Run this until the maximum elevation in the grid is ~ 170 m and observe how the landscape gets to this elevation, i.e. plot intermediate steps.* \n",
+    "\n",
+    "*Which patterns, if any, are diagnostic of a landscape response to uniform increase in rock uplift rate? (You may need to answer this after completing all of the questions.)*\n",
+    "\n",
+    "- The steepness index increases from the downstream to upstream direction to reach the new steady state. In the case of an increase in uplift, it differs from the increase in erodibility coefficient by raising the steepness in the landscape."
    ]
   },
   {
@@ -806,7 +810,7 @@
     "#### 3. **Steady-state landscape with increased rock uplift.** \n",
     "*Now run the landscape from question 2 until it reaches steady state. Provide a plot that illustrates that the landscape is in steady state. What aspects of the landscape have changed in comparison with the base landscape from question 1?*\n",
     "\n",
-    "- The elevations have increased 4-fold along with slopes, relief, and the steepness index. The chi index doesn't seem to change that much."
+    "- The elevations have increased 4-fold along with slopes, relief, and the steepness index. The chi index doesn't seem to change that much and this makes sense as Chi is a normalized drainage area metric and therefore shouldn't change if the network (from a top view) itself doesn't change."
    ]
   },
   {
@@ -890,7 +894,12 @@
    "metadata": {},
    "source": [
     "#### 4. **Increase erodibility.** \n",
-    "Start again from the base landscape, but this time increase $K_{sp}$ to 2E-5. Make sure rock uplift rate is set to the original value of 0.0001 m/yr . Set $tmax$ to 1e5 yrs. Run for 1e5 yrs and save the plots that you think are diagnostic. Run for another 1e5 yrs and save plots again. Now run for 5e5 yrs and save plots again. Quantitatively describe how the landscape evolves in response to the increase in erodibility and provide supporting plots. What could cause a uniform increase in erodibility?\n"
+    "*Start again from the base landscape, but this time increase $K_{sp}$ to 2E-5. Make sure rock uplift rate is set to the original value of 0.0001 m/yr. Set $tmax$ to 1e5 yrs. Run for 1e5 yrs and save the plots that you think are diagnostic. Run for another 1e5 yrs and save plots again. Now run for 5e5 yrs and save plots again.*\n",
+    "\n",
+    "*Quantitatively describe how the landscape evolves in response to the increase in erodibility and provide supporting plots. What could cause a uniform increase in erodibility?*\n",
+    "\n",
+    "- The lanscape changes in a similar way as the uplift scenario by propagating a signal from downstream to upstream direction on the steepness index map. It differs from the uplift case because in this case the steepness decreases instead.\n",
+    "- a uniform increase in erodibility could be caused by a change of weathering, so maybe an increase of average temperature o a change in the weathering patters that increases rainfall in the area."
    ]
   },
   {
@@ -1054,7 +1063,15 @@
    "metadata": {},
    "source": [
     "#### 5. **Spatially varible uplift - discrete, massive earthquake.**\n",
-    "Start again from the base landscape, and make sure that $K_{sp}$ = 1E-5 . Now add a seismic event to this steady state landscape - a fault that runs horizontally across the landscape at y = 4000 m, and instantaneously uplifts half the landscape by 10 meters. In this case, we will keep background uplift uniform at 0.0001 m/yr. Set $tmax$ to 1e5 yrs and $dt$ to 500 yrs before evolving the landscape after the fault. Now run the time loop four times and look at the different plots after each loop. How does the landscape respond to this fault? What patterns do you see in the supporting plots that illustrate this type of transient? Which patterns, if any, are diagnostic of a channel response to an earthquake? (You may need to answer this after completing all of the questions.)"
+    "*Start again from the base landscape, and make sure that $K_{sp}$ = 1E-5 . Now add a seismic event to this steady state landscape - a fault that runs horizontally across the landscape at y = 4000 m, and instantaneously uplifts half the landscape by 10 meters. In this case, we will keep background uplift uniform at 0.0001 m/yr. Set $tmax$ to 1e5 yrs and $dt$ to 500 yrs before evolving the landscape after the fault. Now run the time loop four times and look at the different plots after each loop.*\n",
+    "\n",
+    "*How does the landscape respond to this fault?* \n",
+    "\n",
+    "- At first the steepness remains unchanged, shortly after the steepness increases near the fault in the hanging wall and starts spreading a rising steepness signal. It is then followed by a decrease of steepness as the landscape reajust to the original steady state.\n",
+    "\n",
+    "*What patterns do you see in the supporting plots that illustrate this type of transient? Which patterns, if any, are diagnostic of a channel response to an earthquake? (You may need to answer this after completing all of the questions.)*\n",
+    "\n",
+    "- The steepness gradient basically has a \"peak range\" roughly parallel to the fault indicating the increasing and decreasing signals."
    ]
   },
   {
@@ -1341,7 +1358,15 @@
    "metadata": {},
    "source": [
     "#### 6. **Spatially Varible Rock Uplift - discrete fault with two different uplift rates.**\n",
-    "Start again from the base landscape, and make sure that $K_{sp}$ = 1E-5. Now we will add a fault (at y = 4000 m) to this landscape. In this case the uplift rate on the footwall is higher (0.0004 m/yr) than on the hanging wall (uplift rate = 0.0001 m/yr). Set $tmax$ to 1e5 yrs and $dt$ to 500 yrs. Now run the time loop four separate times and look at the different plots after each loop. How does the landscape respond to this fault? What patterns do you see in the supporting plots that illustrate this type of transient? Which patterns, if any, are diagnostic of a channel response to a this type of gradient in rock uplift rates? (You may need to answer this after completing all of the questions.)"
+    "Start again from the base landscape, and make sure that $K_{sp}$ = 1E-5. Now we will add a fault (at y = 4000 m) to this landscape. In this case the uplift rate on the footwall is higher (0.0004 m/yr) than on the hanging wall (uplift rate = 0.0001 m/yr). Set $tmax$ to 1e5 yrs and $dt$ to 500 yrs. \n",
+    "\n",
+    "*Now run the time loop four separate times and look at the different plots after each loop. How does the landscape respond to this fault?* \n",
+    "\n",
+    "- The landscape steepness evolves in a similar way to the transient with constant uplift but it doesn't bounce back, i.e. The increasing steepness signals propagates upstream from the fault but it is not followed by a decreasing signal.\n",
+    "\n",
+    "What patterns do you see in the supporting plots that illustrate this type of transient? Which patterns, if any, are diagnostic of a channel response to a this type of gradient in rock uplift rates? (You may need to answer this after completing all of the questions.)\n",
+    "\n",
+    "- A rising steepness signal moving upstream from the fault."
    ]
   },
   {
@@ -1574,7 +1599,15 @@
    "source": [
     "#### 7. **Spatially Varible Rock Uplift - gradient in uplift across the range.** \n",
     "\n",
-    "Start again from the base landscape, and make sure that $K_{sp}$ = 1E-5 (Code Block 14). Now we will add a linear gradient in uplift rate across the entire range (edit Code Block 16). The maximum uplift rate will be 0.0004 m/yr at the core of the range, and 0.0001 m/yr at the front of the range. Set $tmax$ to 1e5 yrs (Code Block 4) and $dt$ to 500 yrs before you start running the time loop for the fault before you start running the time loop with the rock uplift gradient. Now run the time loop four separate times and look at the different plots after each loop. How does the landscape respond to this gradient in uplift rate? What patterns do you see in the supporting plots that illustrate this type of transient? Which patterns, if any, are diagnostic of a channel response to this type of gradient in rock uplift rates? (You may need to answer this after completing all of the questions.)"
+    "*Start again from the base landscape, and make sure that $K_{sp}$ = 1E-5 (Code Block 14). Now we will add a linear gradient in uplift rate across the entire range (edit Code Block 16). The maximum uplift rate will be 0.0004 m/yr at the core of the range, and 0.0001 m/yr at the front of the range. Set $tmax$ to 1e5 yrs (Code Block 4) and $dt$ to 500 yrs before you start running the time loop for the fault before you start running the time loop with the rock uplift gradient. Now run the time loop four separate times and look at the different plots after each loop.* \n",
+    "\n",
+    "*How does the landscape respond to this gradient in uplift rate?* \n",
+    "\n",
+    "- The gradient raises the steepness in a fairly uniform way across the landscape, but since the fault happened before there's a fairly stronger signal propagating upstream of the fault location. Eventually this dissipates and dies out and only the gradient in steepness remains.\n",
+    "\n",
+    "*What patterns do you see in the supporting plots that illustrate this type of transient? Which patterns, if any, are diagnostic of a channel response to this type of gradient in rock uplift rates? (You may need to answer this after completing all of the questions.)*\n",
+    "\n",
+    "- This is the only plot in which the lower side of the fault actually changes. But in generall, having a gradient in the steepness index is a good indicator of a gradient of uplift as well."
    ]
   },
   {
@@ -1807,7 +1840,9 @@
    "source": [
     "#### 8. **Final Reflection.** \n",
     "\n",
-    "Was your initial insight into how parameters would affect the landscape correct? Discuss in 6 sentences or less."
+    "*Was your initial insight into how parameters would affect the landscape correct? Discuss in 6 sentences or less.*\n",
+    "\n",
+    "- "
    ]
   }
  ],
